logs/sst.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sst'...
Compiling './lib/python3.5/site-packages/sst/actions.py'...
***   File "./lib/python3.5/site-packages/sst/actions.py", line 274
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sst/cases.py'...
***   File "./lib/python3.5/site-packages/sst/cases.py", line 207
    exec self.code in self.context
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/sst/command.py'...
***   File "./lib/python3.5/site-packages/sst/command.py", line 52
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sst/context.py'...
***   File "./lib/python3.5/site-packages/sst/context.py", line 102
    exec h.read() in context
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sst/scripts'...
Listing './lib/python3.5/site-packages/sst/tests'...
Listing './lib/python3.5/site-packages/sst-0.2.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
